--- a/attention-game/index.html
+++ b/attention-game/index.html
@@ -1,97 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Attention Game</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<div id="screen">
-    <h1 id="title">Attention Game</h1>
-    <p id="subtitle">press space to continue</p>
-</div>
-
-<form id="demographics" class="hidden">
-    <h2>Demographic Questions</h2>
-
-    <label>
-        Name (Feel free to use a fake name, but please make sure other information is accurate)
-        <input type="text" name="entry.280963074">
-    </label>
-
-    <label>
-        Birthday (MM/DD/YR) — e.g. 03/12/09
-        <input type="text" name="entry.90289892"
-    </label>
-
-    <label>
-        Current Date (MM/DD/YR)
-        <input type="text" name="entry.1194678358"
-    </label>
-
-    <label>
-        Are you a student or teacher/administrator?
-        <input type="text" name="entry.540422629"
-    </label>
-
-    <label>
-        What grade are you in? (9, 10, 11, or 12)
-        <input type="text" name="entry.2124972352">
-    </label>
-
-    <label>
-        Are you granted extra time for testing? (No, 1.5 time, or Double time)
-        <input type="text" name="entry.1938053400">
-    </label>
-
-    <label>
-        What is your current level of science? (Elective, Regular, or Intensive)
-        <input type="text" name="entry.1666836259">
-    </label>
-
-    <label>
-        What is your current level of math? (1, 3, 5, or 7)
-        <input type="text" name="entry.1720875399">
-    </label>
-
-    <label>
-        What subject do you teach, or what is your administrator role?
-        <input type="text" name="entry.294712038">
-    </label>
-
-    <label>
-        Self-report your daily screen time (e.g. "6 hrs")
-        <input type="text" name="entry.111459201">
-    </label>
-
-    <label>
-        Specify your screen time breakdown
-        <textarea name="entry.1261445692"
-        placeholder="e.g. 2 hrs social media, 1 hr video games, 3 hrs Google Classroom"></textarea>
-    </label>
-</form>
-
-<div id="thankyou" class="hidden">
-    <h1>Thank you for playing</h1>
-</div>
-
 <script>
+/* ======================
+   DOM REFERENCES
+====================== */
 const screen = document.getElementById("screen");
 const title = document.getElementById("title");
 const subtitle = document.getElementById("subtitle");
 const form = document.getElementById("demographics");
 const thankyou = document.getElementById("thankyou");
 
+/* ======================
+   STATE VARIABLES
+====================== */
 let state = 0;
 let gameActive = false;
 let startTime;
 let currentLetter = "";
-let letterStart;
-let gameDuration = 60 * 500;
-let reactionTimes = [];
+let letterStart = null;
 
+let gameDuration = 10 * 60 * 1000; // 10 minutes
+
+// Trial storage
+let trials = [];
+
+/* ======================
+   INPUT HANDLING
+====================== */
 document.addEventListener("keydown", e => {
     if (e.code === "Space") {
         e.preventDefault();
@@ -102,11 +35,12 @@ document.addEventListener("keydown", e => {
 function handleSpace() {
     if (state === 0) showDirections();
     else if (state === 1) startGame();
-    else if (gameActive && currentLetter === "X") {
-        reactionTimes.push(Date.now() - letterStart);
-    }
+    else if (gameActive) registerResponse();
 }
 
+/* ======================
+   SCREENS
+====================== */
 function showDirections() {
     state = 1;
     title.textContent = "Directions";
@@ -122,14 +56,17 @@ function showDirections() {
 function startGame() {
     state = 2;
     gameActive = true;
-    startTime = Date.now();
+    startTime = performance.now();
     title.textContent = "";
     subtitle.textContent = "";
     runTrial();
 }
 
+/* ======================
+   GAME LOGIC
+====================== */
 function runTrial() {
-    if (Date.now() - startTime >= gameDuration) {
+    if (performance.now() - startTime >= gameDuration) {
         endGame();
         return;
     }
@@ -138,8 +75,16 @@ function runTrial() {
         ? "X"
         : String.fromCharCode(65 + Math.floor(Math.random() * 26));
 
+    letterStart = performance.now();
+
+    trials.push({
+        time: letterStart,
+        letter: currentLetter,
+        responded: false,
+        reactionTime: null
+    });
+
     title.textContent = currentLetter;
-    letterStart = Date.now();
 
     setTimeout(() => {
         title.textContent = "";
@@ -148,6 +93,20 @@ function runTrial() {
     }, 250);
 }
 
+function registerResponse() {
+    const lastTrial = trials[trials.length - 1];
+    if (!lastTrial || lastTrial.responded) return;
+
+    lastTrial.responded = true;
+
+    if (lastTrial.letter === "X") {
+        lastTrial.reactionTime = performance.now() - letterStart;
+    }
+}
+
+/* ======================
+   END GAME
+====================== */
 function endGame() {
     gameActive = false;
     screen.classList.add("hidden");
@@ -157,6 +116,88 @@ function endGame() {
     fields[fields.length - 1].addEventListener("keydown", submitOnEnter);
 }
 
+/* ======================
+   PERFORMANCE METRICS
+====================== */
+function computePerformance() {
+    let correctX = 0;
+    let correctIgnore = 0;
+    let reactionTimes = [];
+
+    trials.forEach(t => {
+        if (t.letter === "X" && t.responded) {
+            correctX++;
+            reactionTimes.push(t.reactionTime);
+        }
+        if (t.letter !== "X" && !t.responded) {
+            correctIgnore++;
+        }
+    });
+
+    const accuracy =
+        ((correctX + correctIgnore) / trials.length) * 100;
+
+    const avgRT =
+        reactionTimes.reduce((a, b) => a + b, 0) / reactionTimes.length;
+
+    return { accuracy, avgRT };
+}
+
+/* ======================
+   TREND CALCULATIONS
+====================== */
+function linearSlope(x, y) {
+    const n = x.length;
+    const mx = x.reduce((a,b)=>a+b,0) / n;
+    const my = y.reduce((a,b)=>a+b,0) / n;
+
+    let num = 0, den = 0;
+    for (let i = 0; i < n; i++) {
+        num += (x[i] - mx) * (y[i] - my);
+        den += (x[i] - mx) ** 2;
+    }
+    return den === 0 ? 0 : num / den;
+}
+
+function computeTrends(blockMs = 60000) {
+    let blocks = {};
+
+    trials.forEach(t => {
+        const block = Math.floor((t.time - trials[0].time) / blockMs);
+        if (!blocks[block]) blocks[block] = [];
+        blocks[block].push(t);
+    });
+
+    let time = [];
+    let acc = [];
+    let rt = [];
+
+    Object.keys(blocks).forEach((b, i) => {
+        let correct = 0;
+        let rts = [];
+
+        blocks[b].forEach(t => {
+            if (t.letter === "X" && t.responded) {
+                correct++;
+                rts.push(t.reactionTime);
+            }
+            if (t.letter !== "X" && !t.responded) correct++;
+        });
+
+        time.push(i);
+        acc.push(correct / blocks[b].length);
+        rt.push(rts.length ? rts.reduce((a,b)=>a+b,0)/rts.length : null);
+    });
+
+    return {
+        accuracyTrend: linearSlope(time, acc),
+        reactionTrend: linearSlope(time, rt.map(v => v ?? rt[0]))
+    };
+}
+
+/* ======================
+   FORM SUBMISSION
+====================== */
 function submitOnEnter(e) {
     if (e.key === "Enter") {
         e.preventDefault();
@@ -165,12 +206,16 @@ function submitOnEnter(e) {
 }
 
 function submitForm() {
+    const perf = computePerformance();
+    const trends = computeTrends();
+
     const data = new FormData(form);
-    data.append(
-        "entry.1261445692",
-        data.get("entry.1261445692") +
-        "\nReaction times (ms): " + reactionTimes.join(", ")
-    );
+
+    // 🔽 REPLACE ENTRY IDS
+    data.append("entry.ACCURACY_ID", perf.accuracy.toFixed(2));
+    data.append("entry.RT_ID", perf.avgRT.toFixed(1));
+    data.append("entry.ACC_TREND_ID", trends.accuracyTrend.toFixed(4));
+    data.append("entry.RT_TREND_ID", trends.reactionTrend.toFixed(4));
 
     fetch("https://docs.google.com/forms/d/e/1FAIpQLSdVY3gTqkYRHXfqHcmA-AvBUbCaQJ5_Y79sMU7YvSd7adVyAg/formResponse", {
         method: "POST",
@@ -183,8 +228,7 @@ function submitForm() {
 }
 </script>
 
-</body>
-</html>
+
 
 
 
