--- a/attention-game/index.html
+++ b/attention-game/index.html
@@ -17,7 +17,7 @@ let startTime;
 let currentLetter = "";
 let letterStart = null;
 
-let gameDuration = 10 * 60 * 1000; // 10 minutes
+let gameDuration = 60 * 500; // 10 minutes
 
 // Trial storage
 let trials = [];
@@ -227,6 +227,7 @@ function submitForm() {
     thankyou.classList.remove("hidden");
 }
 </script>
+
 
 
 
