--- a/attention-game/index.html
+++ b/attention-game/index.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+   
+<head>
+    <meta charset="UTF-8">
+    <title>Attention Game</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<div id="screen">
+    <h1 id="title">Attention Game</h1>
+    <p id="subtitle">press space to continue</p>
+</div>
+
 <script>
 /* ======================
    DOM REFERENCES
@@ -227,6 +242,7 @@ function submitForm() {
     thankyou.classList.remove("hidden");
 }
 </script>
+
 
 
 
