--- a/attention-game/index.html
+++ b/attention-game/index.html
@@ -17,6 +17,20 @@
       <label>Name <input type="text" name="entry.280963074"></label>
       <label>Birthday <input type="text" name="entry.90289892"></label>
       <label>Current Date <input type="text" name="entry.1194678358"></label>
+      <label>Grade/Position/Role <input type="text" name="entry.540422629"></label>
+      <label>Grade Level <input type="text" name="entry.2124972352"></label>
+      <label>Extra Time? <impit type-"text" name="entry.1938053400"></impit>label>
+      <label>Current level of Science <input type="text" name="entry.1666836259"></label>
+      <label>Current level of Math <input type="text" name="entry.1720875399"></label>
+      <label>What subject do you teach (if applicable)<input type="text" name="entry.294712038"></label>
+      <label>Estimated daily screen time (hours) <input type="text" name="entry.111459201"></label>
+      <label>Estimated screen time breakdown <textarea name="entry.1261445692"></textarea></label>
+  
+
+   
+
+  
+
   </form>
 
   <div id="thankyou" class="hidden">
@@ -252,6 +266,7 @@ function submitForm() {
     thankyou.classList.remove("hidden");
 }
 </script>
+
 
 
 
