Fix HTML structure and correct input types

--- a/attention-game/index.html
+++ b/attention-game/index.html
@@ -19,7 +19,7 @@
       <label>Current Date <input type="text" name="entry.1194678358"></label>
       <label>Grade/Position/Role <input type="text" name="entry.540422629"></label>
       <label>Grade Level <input type="text" name="entry.2124972352"></label>
-      <label>Extra Time? <impit type-"text" name="entry.1938053400"></impit>label>
+      <label>Extra Time? <impit type="text" name="entry.1938053400"></impit>label>
       <label>Current level of Science <input type="text" name="entry.1666836259"></label>
       <label>Current level of Math <input type="text" name="entry.1720875399"></label>
       <label>What subject do you teach (if applicable)<input type="text" name="entry.294712038"></label>
@@ -266,6 +266,7 @@ function submitForm() {
     thankyou.classList.remove("hidden");
 }
 </script>
+
 
 
 
