--- a/attention-game/index.html
+++ b/attention-game/index.html
@@ -14,17 +14,17 @@
   </div>
 
   <form id="demographics" class="hidden">
-      <label>Name <input type="text" name="entry.280963074"></label>
-      <label>Birthday <input type="text" name="entry.90289892"></label>
-      <label>Current Date <input type="text" name="entry.1194678358"></label>
-      <label>Grade/Position/Role <input type="text" name="entry.540422629"></label>
-      <label>Grade Level <input type="text" name="entry.2124972352"></label>
-      <label>Extra Time <input type="text" name="entry.1938053400"></label>
-      <label>Current level of Science <input type="text" name="entry.1666836259"></label>
-      <label>Current level of Math <input type="text" name="entry.1720875399"></label>
-      <label>What subject do you teach (if applicable)<input type="text" name="entry.294712038"></label>
-      <label>Estimated daily screen time (hours) <input type="text" name="entry.111459201"></label>
-      <label>Estimated screen time breakdown <textarea name="entry.1261445692"></textarea></label>
+      <label>Name (Feel free to use a fake name, but please make sure other information is accurate) <input type="text" name="entry.280963074"></label>
+      <label>Birthday (MM/DD/YR) E.g. 03/12/09 <input type="text" name="entry.90289892"></label>
+      <label>Current Date (MM/DD/YR) <input type="text" name="entry.1194678358"></label>
+      <label>Are you a student or teacher/administrator? <input type="text" name="entry.540422629"></label>
+      <label>What grade are you in? (9, 10, 11, 12 or N/A) <input type="text" name="entry.2124972352"></label>
+      <label>Are you granted extra time for testing? (No, 1.5 time, Double time or N/A) <input type="text" name="entry.1938053400"></label>
+      <label>What is your current level of science? (Elective, Regular, Intensive, or N/A) <input type="text" name="entry.1666836259"></label>
+      <label>What is your current level of math? (1, 3, 5, 7, or N/A) <input type="text" name="entry.1720875399"></label>
+      <label>What subject do you teach? (e.g. "Hisotry, or N/A)<input type="text" name="entry.294712038"></label>
+      <label>Self report your daily screen time to the best of your knowledge, feel free to check your devices. (e.g. "# hrs") <input type="text" name="entry.111459201"></label>
+      <label>Specify your screen time breakdown to the best of your knowledge. (e.g. "# hour(s) social media, # hour(s) playing video games, # hour(s) google classroom") <textarea name="entry.1261445692"></textarea></label>
   
 
    
@@ -267,6 +267,7 @@ function submitForm() {
     thankyou.classList.remove("hidden");
 }
 </script>
+
 
 
 
