Fix HTML encoding issues in index.html

--- a/attention-game/index.html
+++ b/attention-game/index.html
@@ -55,7 +55,7 @@ let startTime;
 let currentLetter = "";
 let letterStart = null;
 
-let gameDuration = 60 * 500; // 10 minutes
+let gameDuration = 10 * 60 * 1000; // 10 minutes
 
 // Trial storage
 let trials = [];
@@ -266,6 +266,7 @@ function submitForm() {
     thankyou.classList.remove("hidden");
 }
 </script>
+
 
 
 
